# scVIZ

./: .gitignore  DEPLOY.md  LICENSE  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  tests.yml
.streamlit/: config.toml
data/: available_datasets.csv
docs/: .gitignore  README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: modules.rst  utils.rst
docs/source/user_guide/: de_module.rst  explore_module.rst  getting_started.rst  qc_module.rst  visualize_module.rst
modules/: __init__.py  differential_expression.py  explore_dataset.py  quality_control.py  visualize_dataset.py  visualize_expression.py
tests/: __init__.py  test_data_loader.py
utils/: __init__.py  data_loader.py
